made the hidden dimensions for debug mode smaller

--- a/dreamerv2/configs.yaml
+++ b/dreamerv2/configs.yaml
@@ -47,15 +47,17 @@ defaults:
     dynamics: 'default', 
     update: 'default',
   }
-  encoder_type: 'default'
   encoder: {mlp_keys: '.*', cnn_keys: '.*', act: elu, norm: none, cnn_depth: 48, cnn_kernels: [4, 4, 4, 4], mlp_layers: [400, 400, 400, 400]}
-  decoder_type: 'default'
   decoder: {mlp_keys: '.*', cnn_keys: '.*', act: elu, norm: none, cnn_depth: 48, cnn_kernels: [5, 5, 6, 6], mlp_layers: [400, 400, 400, 400]}
   reward_head: {layers: 4, units: 400, act: elu, norm: none, dist: mse}
   discount_head: {layers: 4, units: 400, act: elu, norm: none, dist: binary}
   loss_scales: {kl: 1.0, reward: 1.0, discount: 1.0, proprio: 1.0}
   kl: {free: 0.0, forward: False, balance: 0.8, free_avg: True}
   model_opt: {opt: adam, lr: 1e-4, eps: 1e-5, clip: 100, wd: 1e-6}
+
+  # Testing out Encoders and Decoders
+  encoder_type: 'default'
+  decoder_type: 'default'
 
   # Slot Attention
   slot_dim: 200
@@ -173,17 +175,17 @@ debug:
   pretrain: 1
   train_steps: 1
   replay: {minlen: 10, maxlen: 30}
-  dataset: {batch: 16, length: 10}
+  dataset: {batch: 3, length: 6}
   cpu: True
   headless: False
 
-  rssm: {hidden: 50, deter: 48, stoch: 8, discrete: 8}
-  encoder: {cnn_depth: 4, mlp_layers: [50, 50], mlp_keys: '$^', cnn_keys: 'image'}
-  decoder: {cnn_depth: 4, mlp_layers: [50, 50], mlp_keys: '$^', cnn_keys: 'image'}
-  reward_head: {layers: 2, units: 50, act: elu, norm: none, dist: mse}
-  discount_head: {layers: 2, units: 50, act: elu, norm: none, dist: binary}
+  rssm: {hidden: 10, deter: 8, stoch: 4, discrete: 4}
+  encoder: {cnn_depth: 4, mlp_layers: [8, 8], mlp_keys: '$^', cnn_keys: 'image'}
+  decoder: {cnn_depth: 4, mlp_layers: [8, 8], mlp_keys: '$^', cnn_keys: 'image'}
+  reward_head: {layers: 2, units: 8, act: elu, norm: none, dist: mse}
+  discount_head: {layers: 2, units: 8, act: elu, norm: none, dist: binary}
 
-  actor: {layers: 2, units: 50, act: elu, norm: none, dist: auto, min_std: 0.1}
-  critic: {layers: 2, units: 50, act: elu, norm: none, dist: mse}
+  actor: {layers: 2, units: 8, act: elu, norm: none, dist: auto, min_std: 0.1}
+  critic: {layers: 2, units: 8, act: elu, norm: none, dist: mse}
 
-  expl_head: {layers: 2, units: 50, act: elu, norm: none, dist: mse}
+  expl_head: {layers: 2, units: 8, act: elu, norm: none, dist: mse}
