--- a/dreamerv2/configs.yaml
+++ b/dreamerv2/configs.yaml
@@ -46,7 +46,7 @@ defaults:
   rssm: {ensemble: 1, hidden: 1024, deter: 1024, stoch: 32, discrete: 32, act: elu, norm: none, std_act: sigmoid2, min_std: 0.1, 
     dynamics: 'default', 
     update: 'default',
-    embed_dim: 16
+    embed_dim: 16  # not used for default
   }
   encoder: {mlp_keys: '.*', cnn_keys: '.*', act: elu, norm: none, cnn_depth: 48, cnn_kernels: [4, 4, 4, 4], mlp_layers: [400, 400, 400, 400]}
   decoder: {mlp_keys: '.*', cnn_keys: '.*', act: elu, norm: none, cnn_depth: 48, cnn_kernels: [5, 5, 6, 6], mlp_layers: [400, 400, 400, 400]}
@@ -61,7 +61,7 @@ defaults:
   decoder_type: 'default'
 
   # Slot Attention
-  num_slots: 1
+  num_slots: 1  # not used for default
 
   # Actor Critic
   actor: {layers: 4, units: 400, act: elu, norm: none, dist: auto, min_std: 0.1}
