--- a/dreamerv2/configs.yaml
+++ b/dreamerv2/configs.yaml
@@ -30,7 +30,7 @@ defaults:
   jit: True
   cpu: False
   headless: True
-  watch: [dataset.batch dataset.length]
+  watch: [dataset.batch, dataset.length]
 
   video_pred: {batch_size: 6, seed_steps: 5}
 
