--- a/dreamerv2/configs.yaml
+++ b/dreamerv2/configs.yaml
@@ -31,6 +31,7 @@ defaults:
   cpu: False
   headless: True
   watch: [dataset.batch, dataset.length]
+  debug: False
 
   video_pred: {batch_size: 6, seed_steps: 5}
 
@@ -186,6 +187,7 @@ debug:
   dataset: {batch: 3, length: 6}
   cpu: True
   headless: False
+  debug: True
 
   rssm: {hidden: 10, deter: 8, stoch: 4, discrete: 4, embed_dim: 8}
   encoder: {cnn_depth: 4, mlp_layers: [8, 8], mlp_keys: '$^', cnn_keys: 'image'}
