jit only imagine, actor_loss, critic_loss. Do not jit the behavior.train() for now. delay training the behavior by self.config.delay_train_behavior_by

--- a/dreamerv2/configs.yaml
+++ b/dreamerv2/configs.yaml
@@ -63,6 +63,7 @@ defaults:
 
   wm: 'default'
   wm_only: False
+  delay_train_behavior_by: 50000
 
   # Testing out Encoders and Decoders
   encoder_type: 'default'
@@ -219,3 +220,4 @@ dslate:
   wm_only: True
   wm: dslate
   precision: 32
+  delay_train_behavior_by: 50000
