added flag for stop gradient into critic

--- a/dreamerv2/configs.yaml
+++ b/dreamerv2/configs.yaml
@@ -64,6 +64,7 @@ defaults:
   wm: 'default'
   wm_only: False
   delay_train_behavior_by: 50000
+  critic_stop_grad: False
 
   # Testing out Encoders and Decoders
   encoder_type: 'default'
@@ -221,3 +222,4 @@ dslate:
   wm: dslate
   precision: 32
   delay_train_behavior_by: 50000
+  critic_stop_grad: False
