MirroredStrategy with 2 gpus runs. Did not check PRNG or gradients, but from the debug run the run looks reasonable

--- a/dreamerv2/configs.yaml
+++ b/dreamerv2/configs.yaml
@@ -33,6 +33,7 @@ defaults:
   watch: [dataset.batch, dataset.length]
   debug: False
   load_from: ''
+  data_parallel: False
 
   eval_dataset: {batch: 6, seed_steps: 5, length: 50}
 
