--- a/dreamerv2/configs.yaml
+++ b/dreamerv2/configs.yaml
@@ -73,7 +73,7 @@ defaults:
   encoder_type: 'default'
   decoder_type: 'default'
   behavior_type: 'default'
-  pos_encode_type: 'none'
+  pos_encode_type: 'slate'
 
   # Slot Attention
   # num_slots: 1  # not used for default
