--- a/dreamerv2/configs.yaml
+++ b/dreamerv2/configs.yaml
@@ -54,7 +54,8 @@ defaults:
     update_type: 'default',
     initial_type: 'default',
     embed_dim: 64,  # not used for default
-    num_slots: 1  # not used in default
+    num_slots: 1,  # not used in default
+    resolution: [16, 16]
   }
   encoder: {mlp_keys: '.*', cnn_keys: '.*', act: elu, norm: none, cnn_depth: 48, cnn_kernels: [4, 4, 4, 4], mlp_layers: [400, 400, 400, 400]}
   decoder: {mlp_keys: '.*', cnn_keys: '.*', act: elu, norm: none, cnn_depth: 48, cnn_kernels: [5, 5, 6, 6], mlp_layers: [400, 400, 400, 400]}
@@ -233,5 +234,5 @@ slot:
   rssm.update_type: slot
   rssm.dynamics_type: cross
   rssm.initial_type: iid
-  behavior_type: crossattn
+  behavior_type: ca
 
